k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: globe
  namespace: globe
spec:
  selector:
    app: globe
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
